index.html 加入基本的版面元素；css 加入清除預設樣式

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="wrapper">
+    <!-- Start header -->
+    <header class="header">
+      
+    </header>
+    <!-- End header -->
+
+    <!-- Start main -->
+    <section class="main">
+
+    </section>
+    <!-- End main -->
+
+    <!-- Start footer -->
+    <footer class="footer">
+
+    </footer>
+    <!-- End footer -->
+  </div>
+  
+
   
 </body>
 </html>
