設定好基礎的 global 樣式，如 container、row、col

--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
   <div class="wrapper">
     <!-- Start header -->
     <header class="header">
-      
+
     </header>
     <!-- End header -->
 
     <!-- Start main -->
     <section class="main">
-
+      <div class="container">
+        <div class="row">
+          <div class="col-1-2">123</div>
+          <div class="col-1-2">456</div>
+        </div>
+      </div>
     </section>
     <!-- End main -->
 
