--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>日沐咖啡 Rimo cafe</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="wrapper">
-    <!-- Start header -->
-    <header class="header">
-
-    </header>
-    <!-- End header -->
-
-    <!-- Start main -->
-    <section class="main">
-      <div class="container">
-        <div class="row">
-          <div class="col-1-2">123</div>
-          <div class="col-1-2">456</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>日沐咖啡 Rimoo cafe</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <!-- Start header -->
+      <header class="header">
+        <div class="navbar">
+          <div class="container">
+            <a href="#" class="brand">
+              <h1>日沐咖啡 Rimoo cafe</h1>
+            </a>
+            <ul class="nav">
+              <li class="nav-item"><a href="#" class="nav-link">關於</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">服務</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">訂位</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">菜單</a></li>
+              <li class="nav-item"><a href="#" class="nav-link">聯絡</a></li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </section>
-    <!-- End main -->
+        
+      </header>
+      <!-- End header -->
 
-    <!-- Start footer -->
-    <footer class="footer">
+      <!-- Start main -->
+      <section class="main">
+        <div class="container">
+          <div class="row">
+            <div class="col-1-2">123</div>
+            <div class="col-1-2">456</div>
+          </div>
+        </div>
+      </section>
+      <!-- End main -->
 
-    </footer>
-    <!-- End footer -->
-  </div>
-  
-
-  
-</body>
+      <!-- Start footer -->
+      <footer class="footer"></footer>
+      <!-- End footer -->
+    </div>
+  </body>
 </html>
