--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
 
       <!-- Start main -->
       <section class="main">
-        <div class="container">
-          <div class="row">
-            <div class="col-1-2">123</div>
-            <div class="col-1-2">456</div>
+        <!-- Start jumbotron -->
+        <div class="jumbotron">
+          <div class="mask-dark"></div>
+          <div class="container">
+            <div class="logo-image" style="background-image: url('/images/common/logo-w.png')"></div>
+            <div class="btn-group-center">
+              <a href="#" class="btn btn-primary btn-lg">這是一個按鈕</a>
+              <a href="#" class="btn btn-secondary btn-lg">這是一個按鈕</a>
+            </div>
           </div>
         </div>
+        <!-- End jumbotron -->
       </section>
       <!-- End main -->
 
