--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
           </div>
         </div>
         <!-- End jumbotron -->
+
+        <!-- Start about -->
+        <div class="hero hero-bg-grey">
+          <div class="container">
+            <div class="row">
+              <div class="col-1-2">
+                <div class="about-preview">
+                  <h3 class="title">每杯咖啡留著手的餘溫</h3>
+                  <p class="para">一個咖啡有溫度的故事，只要咖啡加熱，沸騰到攝氏100度，你就可以用手摸摸看，應該會十分燙手，一個咖啡有溫度的故事，只要咖啡加熱，沸騰到攝氏100度，你就可以用手摸摸看，應該會十分燙手一個咖啡有溫度的故事，只要咖啡加熱，沸騰到攝氏100度，你就可以用手摸摸看，應該會十分燙手。</p>
+                  <a href="#" class="btn btn-primary">更多我們的故事</a>
+                </div>
+              </div>
+              <div class="col-1-2">
+                <div class="image-container">
+                  <div class="image" style="background-image: url('images/products/product005.jpg')"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End about -->
+
+        <!-- Start services -->
+        <div class="hero hero-bg-white">
+          <div class="container"></div>
+        </div>
+        <!-- End services -->
+
+
       </section>
       <!-- End main -->
 
