完成 services、reservation 區塊切版

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             </ul>
           </div>
         </div>
-        
       </header>
       <!-- End header -->
 
@@ -35,7 +34,10 @@
         <div class="jumbotron">
           <div class="mask-dark"></div>
           <div class="container">
-            <div class="logo-image" style="background-image: url('/images/common/logo-w.png')"></div>
+            <div
+              class="logo-image"
+              style="background-image: url('/images/common/logo-w.png')"
+            ></div>
             <div class="btn-group-center">
               <a href="#" class="btn btn-primary btn-lg">這是一個按鈕</a>
               <a href="#" class="btn btn-secondary btn-lg">這是一個按鈕</a>
@@ -45,19 +47,26 @@
         <!-- End jumbotron -->
 
         <!-- Start about -->
-        <div class="hero hero-bg-grey">
+        <div class="hero hero-bg-white">
           <div class="container">
             <div class="row">
               <div class="col-1-2">
                 <div class="about-preview">
                   <h3 class="title">每杯咖啡留著手的餘溫</h3>
-                  <p class="para">一個咖啡有溫度的故事，只要咖啡加熱，沸騰到攝氏100度，你就可以用手摸摸看，應該會十分燙手，一個咖啡有溫度的故事，只要咖啡加熱，沸騰到攝氏100度，你就可以用手摸摸看，應該會十分燙手一個咖啡有溫度的故事，只要咖啡加熱，沸騰到攝氏100度，你就可以用手摸摸看，應該會十分燙手。</p>
+                  <p class="para">
+                    一個咖啡有溫度的故事，只要咖啡加熱，沸騰到攝氏100度，你就可以用手摸摸看，應該會十分燙手，一個咖啡有溫度的故事，只要咖啡加熱，沸騰到攝氏100度，你就可以用手摸摸看，應該會十分燙手一個咖啡有溫度的故事，只要咖啡加熱，沸騰到攝氏100度，你就可以用手摸摸看，應該會十分燙手。
+                  </p>
                   <a href="#" class="btn btn-primary">更多我們的故事</a>
                 </div>
               </div>
               <div class="col-1-2">
                 <div class="image-container">
-                  <div class="image" style="background-image: url('images/products/product005.jpg')"></div>
+                  <div
+                    class="image"
+                    style="
+                      background-image: url('images/products/product005.jpg');
+                    "
+                  ></div>
                 </div>
               </div>
             </div>
@@ -66,14 +75,105 @@
         <!-- End about -->
 
         <!-- Start services -->
-        <div class="hero hero-bg-white">
-          <div class="container"></div>
+        <div class="hero hero-bg-grey">
+          <div class="container">
+            <div class="section-intro">
+              <h2 class="title">SERVICES</h2>
+              <p class="para">
+                我們提供的服務在這裡有初步的介紹，諸如此類的介紹等等<br />多的文字就可以換行繼續寫
+              </p>
+            </div>
+
+            <div class="row">
+              <div class="col-1-3">
+                <div class="service-item">
+                  <div class="image-container">
+                    <div
+                      class="image"
+                      style="
+                        background-image: url('images/products//product001.jpg');
+                      "
+                    ></div>
+                  </div>
+                  <div class="preview">
+                    <div class="title">
+                      香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡
+                    </div>
+                    <div class="subtitle">現煮的香濃咖啡，優質的咖啡豆</div>
+                    <div class="para">
+                      一段中文的敘述文字，說明東西的美味及外觀等等的話，一段中文的敘述文字，說明東西的美味及外觀等等的話。一段中文的敘述文字，說明東西的美味及外觀等等的話。一段中文的敘述文字，說明東西的美味及外觀等等的話。一段中文的敘述文字，說明東西的美味及外觀等等的話。
+                    </div>
+                    <a href="#!" class="btn btn-secondary">Read more</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-1-3">
+                <div class="service-item">
+                  <div class="image-container">
+                    <div
+                      class="image"
+                      style="
+                        background-image: url('images/products//product002.jpg');
+                      "
+                    ></div>
+                  </div>
+                  <div class="preview">
+                    <div class="title">
+                      香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡
+                    </div>
+                    <div class="subtitle">現煮的香濃咖啡，優質的咖啡豆</div>
+                    <div class="para">
+                      一段中文的敘述文字，說明東西的美味及外觀等等的話，一段中文的敘述文字，說明東西的美味及外觀等等的話。一段中文的敘述文字，說明東西的美味及外觀等等的話。一段中文的敘述文字，說明東西的美味及外觀等等的話。一段中文的敘述文字，說明東西的美味及外觀等等的話。
+                    </div>
+                    <a href="#!" class="btn btn-secondary">Read more</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-1-3">
+                <div class="service-item">
+                  <div class="image-container">
+                    <div
+                      class="image"
+                      style="
+                        background-image: url('images/products//product003.jpg');
+                      "
+                    ></div>
+                  </div>
+                  <div class="preview">
+                    <div class="title">
+                      香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡香濃的咖啡
+                    </div>
+                    <div class="subtitle">現煮的香濃咖啡，優質的咖啡豆</div>
+                    <div class="para">
+                      一段中文的敘述文字，說明東西的美味及外觀等等的話，一段中文的敘述文字，說明東西的美味及外觀等等的話。一段中文的敘述文字，說明東西的美味及外觀等等的話。一段中文的敘述文字，說明東西的美味及外觀等等的話。一段中文的敘述文字，說明東西的美味及外觀等等的話。
+                    </div>
+                    <a href="#!" class="btn btn-secondary">Read more</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- End services -->
-
-
       </section>
       <!-- End main -->
+
+      <!-- Start reservation -->
+      <div class="hero reservation">
+        <div class="mask-dark"></div>
+        <div class="container">
+          <div class="section-intro">
+            <h2 class="title">RESERVATION</h2>
+            <p class="para">
+              我們提供的服務在這裡有初步的介紹，諸如此類的介紹等等<br />多的文字就可以換行繼續寫
+            </p>
+          </div>
+          <div class="btn-group-center">
+            <a href="#" class="btn btn-primary btn-lg">訂位請點我</a>
+          </div>
+        </div>
+      </div>
+      <!-- End reservation -->
 
       <!-- Start footer -->
       <footer class="footer"></footer>
