完成 menu-list 區塊樣式

--- a/index.html
+++ b/index.html
@@ -155,25 +155,160 @@
           </div>
         </div>
         <!-- End services -->
-      </section>
-      <!-- End main -->
 
-      <!-- Start reservation -->
-      <div class="hero reservation">
-        <div class="mask-dark"></div>
-        <div class="container">
-          <div class="section-intro">
-            <h2 class="title">RESERVATION</h2>
-            <p class="para">
-              我們提供的服務在這裡有初步的介紹，諸如此類的介紹等等<br />多的文字就可以換行繼續寫
-            </p>
-          </div>
-          <div class="btn-group-center">
-            <a href="#" class="btn btn-primary btn-lg">訂位請點我</a>
+        <!-- Start reservation -->
+        <div class="hero reservation">
+          <div class="mask-dark"></div>
+          <div class="container">
+            <div class="section-intro">
+              <h2 class="title">RESERVATION</h2>
+              <p class="para">
+                我們提供的服務在這裡有初步的介紹，諸如此類的介紹等等<br />多的文字就可以換行繼續寫
+              </p>
+            </div>
+            <div class="btn-group-center">
+              <a href="#" class="btn btn-primary btn-lg">訂位請點我</a>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- End reservation -->
+        <!-- End reservation -->
+
+        <!-- Start Menu -->
+        <div class="hero">
+          <div class="container">
+            <div class="section-intro">
+              <h2 class="title">MENU</h2>
+              <p class="para">
+                我們提供的服務在這裡有初步的介紹，諸如此類的介紹等等<br />多的文字就可以換行繼續寫
+              </p>
+            </div>
+            <div class="menu-list">
+              <div class="title-bar">
+                <h3 class="title">Coffee & Beverage</h3>
+                <a href="#!" class="btn btn-secondary">more</a>
+              </div>
+              <div class="row">
+                <div class="col-1-4">
+                  <a href="#!">
+                    <div class="list-item">
+                      <div class="image-container">
+                        <div class="image" style="background-image: url('/images/products/product005.jpg');"></div>
+                      </div>
+                      <div class="preview">
+                        <h5 class="title">阿拉斯加咖啡</h5>
+                        <div class="h6 subtitle">供應的條件</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-1-4">
+                  <a href="#!">
+                    <div class="list-item">
+                      <div class="image-container">
+                        <div class="image" style="background-image: url('/images/products/product006.jpg');"></div>
+                      </div>
+                      <div class="preview">
+                        <h5 class="title">阿拉斯加咖啡</h5>
+                        <div class="h6 subtitle">供應的條件</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-1-4">
+                  <a href="#!">
+                    <div class="list-item">
+                      <div class="image-container">
+                        <div class="image" style="background-image: url('/images/products/product007.jpg');"></div>
+                      </div>
+                      <div class="preview">
+                        <h5 class="title">阿拉斯加咖啡</h5>
+                        <div class="h6 subtitle">供應的條件</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-1-4">
+                  <a href="#!">
+                    <div class="list-item">
+                      <div class="image-container">
+                        <div class="image" style="background-image: url('/images/products/product008.jpg');"></div>
+                      </div>
+                      <div class="preview">
+                        <h5 class="title">阿拉斯加咖啡</h5>
+                        <div class="h6 subtitle">供應的條件</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="menu-list">
+              <div class="title-bar">
+                <h3 class="title">Coffee & Beverage</h3>
+                <a href="#!" class="btn btn-secondary">more</a>
+              </div>
+              <div class="row">
+                <div class="col-1-4">
+                  <a href="#!">
+                    <div class="list-item">
+                      <div class="image-container">
+                        <div class="image" style="background-image: url('/images/products/product005.jpg');"></div>
+                      </div>
+                      <div class="preview">
+                        <h5 class="title">阿拉斯加咖啡</h5>
+                        <div class="h6 subtitle">供應的條件</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-1-4">
+                  <a href="#!">
+                    <div class="list-item">
+                      <div class="image-container">
+                        <div class="image" style="background-image: url('/images/products/product006.jpg');"></div>
+                      </div>
+                      <div class="preview">
+                        <h5 class="title">阿拉斯加咖啡</h5>
+                        <div class="h6 subtitle">供應的條件</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-1-4">
+                  <a href="#!">
+                    <div class="list-item">
+                      <div class="image-container">
+                        <div class="image" style="background-image: url('/images/products/product007.jpg');"></div>
+                      </div>
+                      <div class="preview">
+                        <h5 class="title">阿拉斯加咖啡</h5>
+                        <div class="h6 subtitle">供應的條件</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-1-4">
+                  <a href="#!">
+                    <div class="list-item">
+                      <div class="image-container">
+                        <div class="image" style="background-image: url('/images/products/product008.jpg');"></div>
+                      </div>
+                      <div class="preview">
+                        <h5 class="title">阿拉斯加咖啡</h5>
+                        <div class="h6 subtitle">供應的條件</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Menu -->
+
+
+      </section>
+      <!-- End main -->
 
       <!-- Start footer -->
       <footer class="footer"></footer>
