--- a/index.html
+++ b/index.html
@@ -306,6 +306,46 @@
         </div>
         <!-- End Menu -->
 
+        <!-- Start contact -->
+        <div class="hero hero-bg-grey">
+          <div class="container">
+            <div class="section-intro">
+              <h2 class="title">CONTACT</h2>
+              <p class="para">我們提供的服務在這裡有初步的介紹，諸如此類的介紹等等<br />多的文字就可以換行繼續寫</p>
+            </div>
+            <div class="row">
+              <div class="col-1-2">
+                <div class="contact-info">
+                  <div class="info-item">
+                    <h4 class="title">
+                      <span>PHONE & TEL</span>
+                    </h4>
+                    <a href="tel:0912345678" class="info">0912-345-678</a>
+                  </div>
+                  <div class="info-item">
+                    <h4 class="title">
+                      <span>LOCATION</span>
+                    </h4>
+                    <a href="#!" class="info">高雄市苓雅區某某路 123 號</a>
+                  </div>
+                  <div class="info-item">
+                    <h4 class="title">
+                      <span>HOURS</span>
+                    </h4>
+                    <div class="info">上午 11:00 至下午 6:00、周四公休</div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-1-2">
+                <div class="map-container">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17196.602228819545!2d121.52018835731069!3d25.029312609233695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a9803a65369f%3A0x61fb21e8f586e51f!2z5aSn5a6J5qOu5p6X5YWs5ZyS!5e0!3m2!1szh-TW!2stw!4v1724121640023!5m2!1szh-TW!2stw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End contact -->
+
 
       </section>
       <!-- End main -->
