完成 footer 區塊的樣式；完成課程的切版教學

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
               <h1>日沐咖啡 Rimoo cafe</h1>
             </a>
             <ul class="nav">
-              <li class="nav-item"><a href="#" class="nav-link">關於</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">服務</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">訂位</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">菜單</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">聯絡</a></li>
+              <li class="nav-item"><a href="#about" class="nav-link">關於</a></li>
+              <li class="nav-item"><a href="#services" class="nav-link">服務</a></li>
+              <li class="nav-item"><a href="#reservation" class="nav-link">訂位</a></li>
+              <li class="nav-item"><a href="#menu" class="nav-link">菜單</a></li>
+              <li class="nav-item"><a href="#contact" class="nav-link">聯絡</a></li>
             </ul>
           </div>
         </div>
@@ -47,7 +47,7 @@
         <!-- End jumbotron -->
 
         <!-- Start about -->
-        <div class="hero hero-bg-white">
+        <div id="about" class="hero hero-bg-white">
           <div class="container">
             <div class="row">
               <div class="col-1-2">
@@ -75,7 +75,7 @@
         <!-- End about -->
 
         <!-- Start services -->
-        <div class="hero hero-bg-grey">
+        <div id="services" class="hero hero-bg-grey">
           <div class="container">
             <div class="section-intro">
               <h2 class="title">SERVICES</h2>
@@ -157,7 +157,7 @@
         <!-- End services -->
 
         <!-- Start reservation -->
-        <div class="hero reservation">
+        <div id="reservation" class="hero reservation">
           <div class="mask-dark"></div>
           <div class="container">
             <div class="section-intro">
@@ -174,7 +174,7 @@
         <!-- End reservation -->
 
         <!-- Start Menu -->
-        <div class="hero">
+        <div id="menu" class="hero">
           <div class="container">
             <div class="section-intro">
               <h2 class="title">MENU</h2>
@@ -307,7 +307,7 @@
         <!-- End Menu -->
 
         <!-- Start contact -->
-        <div class="hero hero-bg-grey">
+        <div id="contact" class="hero hero-bg-grey">
           <div class="container">
             <div class="section-intro">
               <h2 class="title">CONTACT</h2>
@@ -351,7 +351,24 @@
       <!-- End main -->
 
       <!-- Start footer -->
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="hero">
+          <div class="mask-dark"></div>
+          <div class="container">
+            <a href="" class="brand"></a>
+            <ul class="nav">
+              <li class="nav-item"><a href="#about" class="nav-link">關於</a></li>
+              <li class="nav-item"><a href="#services" class="nav-link">服務</a></li>
+              <li class="nav-item"><a href="#reservation" class="nav-link">訂位</a></li>
+              <li class="nav-item"><a href="#menu" class="nav-link">菜單</a></li>
+              <li class="nav-item"><a href="#contact" class="nav-link">聯絡</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>© Copyright 2020 All rights reserved</p>
+        </div>
+      </footer>
       <!-- End footer -->
     </div>
   </body>
